# alex-scrapper-pro

./: .env.example  INTEGRATION.md  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: external.py  profiles.py  queue.py  router.py  websocket.py
backend/app/db/: mongodb.py
backend/app/models/: profile.py
backend/app/services/: profile_service.py  queue_service.py
backend/app/tasks/: celery_app.py  ingest_task.py  scrape_task.py
backend/app/utils/: helpers.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_converter.py  test_profiles_api.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  profiles.ts
frontend/src/hooks/: useProfiles.ts  useWebSocket.ts
frontend/src/pages/: AddProfilePage.tsx  DashboardPage.tsx  ProfileDetailPage.tsx
frontend/src/store/: queueStore.ts
frontend/src/stores/: themeStore.ts
frontend/src/types/: profile.ts
frontend/src/utils/: formatters.ts
scraper/: .gitignore  Dockerfile  docker-compose.yaml  facebook_cookies.json  facebook_cookies.py  pyproject.toml  run_scrape.py
scraper/common/: auth.py  dataclasses.py  driver_manager.py  request_tracker_server.py  utils.py
scraper/manual/: README.md  SERVER_TRACKING_README.md  comment_scraper.py  main.py  request_tracker_client_comments.js
scraper/manual/profile/: README.md  main.py  profile_scraper.py
scripts/: init-mongo.js
(+12 files in other folders)
